# serializer version: 1
# name: test_create_waybill
  dict({
    'TrackingNumber': 'TT790123783CH',
  })
# ---
# name: test_get_cost_centers
  dict({
    'CostCenters': list([
      dict({
        'Description': 'KST1',
        'Value': '0981000000935',
      }),
      dict({
        'Description': 'KST2',
        'Value': '0981000000936',
      }),
    ]),
  })
# ---
# name: test_get_delivery_lead_times
  dict({
    'LeadTime': 'E + 2-3',
    'Product': 'DOCUMENTS_URGENT',
    'ReceiverCountryIso': 'DE',
  })
# ---
# name: test_post_waybill_documents
  dict({
    'DocumentId': 'c0fb150f-6bf3-44df-984a-3a0611ae5e4a',
  })
# ---
# name: test_post_waybill_signatures
  dict({
    'SignatureId': 'c0fb150f-6bf3-44df-984a-3a0611ae5e4a',
  })
# ---
# name: test_reprint_waybill
  dict({
  })
# ---
# name: test_unmatched_waybill_path_returns_stub_not_found
  dict({
    'error': 'stub_not_found',
    'message': 'GET /v3/dcapi-waybill-document-public/nonexistent-endpoint is not yet implemented in yes-person',
    'method': 'GET',
    'path': '/v3/dcapi-waybill-document-public/nonexistent-endpoint',
  })
# ---
